added listview and text view to activity main and removed the layout land activity main file added menuNotice string item to the string resource file

--- a/LunchList/res/values/strings.xml
+++ b/LunchList/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="sit_downtitle">Sit-Down</string>
     <string name="deliverytitle">Delivery</string>
     <string name="typetitle">Types:</string>
+    <string name="menuNotice">Click the MENU button to add a restaurant!</string>
 
 
 </resources>
