--- a/LunchList/res/values/strings.xml
+++ b/LunchList/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="deliverytitle">Delivery</string>
     <string name="typetitle">Types:</string>
     <string name="menuNotice">Click the MENU button to add a restaurant!</string>
+    <string name="feedtitle">Feed URL</string>
 
 
 </resources>
