-changed detailfor.xml layout and layout-land by removing the button and adding in location textviews -changed detail option menu with compass icon menu option -updated string value xml with new strings -updated detail form to with location textview and save method -per chap 17 step 3

--- a/LunchList/res/values/strings.xml
+++ b/LunchList/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="typetitle">Types:</string>
     <string name="menuNotice">Click the MENU button to add a restaurant!</string>
     <string name="feedtitle">Feed URL</string>
-
+    <string name="location">Location:</string>
+    <string name="not_set">(not set)</string>
 
 </resources>
