did some formating of widgetservice, updated strings.xml, updated manifest with new service per chap 21 step 7

--- a/LunchList/res/values/strings.xml
+++ b/LunchList/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="feedtitle">Feed URL</string>
     <string name="location">Location:</string>
     <string name="not_set">(not set)</string>
+    <string name="empty"> No restaurants!</string>
 
 </resources>
